--- a/about.html
+++ b/about.html
@@ -178,6 +178,9 @@ This application allows us to see the effect of the change in those parameters u
 <li><strong>Dataset tab</strong> : you can have a look at the whole dataset, which is truncated in regard of the number of observations you have selected with the slider on the left side panel.</li>
 </ul>
 
+<p>The code files for this shiny app can be found on GitHub at the following link :
+<a href="https://github.com/rdesannicolas/DDP-course-project">https://github.com/rdesannicolas/DDP-course-project</a></p>
+
 </body>
 
 </html>
